[tool.poetry]
name = "python-boilerplate"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "python_boilerplate" }, { include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^0.991"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
